@@ -43,11 +43,10 @@ typedef void CgUpnpAvServer;
 - (id)initWithCObject:(CgUpnpDevice *)cobj;
 - (void)setUserObject:(id)aUserObj;
 - (id)userObject;
-- (NSArray *)browse:(NSString *)aObjectId browseFlag:(NSString *)aBrowseFlag;
-- (NSArray *)browse:(NSString *)aObjectId browseFlag:(NSString *)aBrowseFlag withRequestedCount:(NSUInteger) aRequestedCount;
-- (CGUpnpAvObject *)browseMetadata:(NSString *)aObjectId;
+- (BOOL)browse:(NSString *)aObjectId browseFlag:(NSString *)aBrowseFlag options:(NSDictionary *)options;
+- (BOOL)browseMetadata:(NSString *)aObjectId;
 - (NSArray *)browseDirectChildren:(NSString *)aObjectId;
-- (NSArray *)browseDirectChildren:(NSString *)aObjectId withRequestedCount:(NSUInteger) aRequestedCount;
+- (NSArray *)browseDirectChildren:(NSString *)aObjectId requestedCount:(NSUInteger) aRequestedCount;
 - (NSArray *)search:(NSString *)aSearchCriteria;
 - (CGUpnpAvContainer *)rootObject;
 - (CGUpnpAvObject *)objectForId:(NSString *)aObjectId;
